styles/navbar.module.scss
@import "variables";
@import "mixins";

.navbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
  padding: 20px 40px;
  background-color: #18171c;
  filter: drop-shadow(0 1px 10px rgba(0, 0, 0, 0.3));
  transition: all 0.3s ease-in-out;

  .desktop_view {
    margin: 0 auto;
    @include center;
    justify-content: space-between;
    padding: 8px 10px;

    @media screen and (min-width: 1400px) {
      max-width: 1400px;
    }

    @media screen and (max-width: 1400px) {
      max-width: 100%;
    }

    .logo {
      flex: 0.2;
      margin-right: auto;

      img {
        width: 180px;
        height: auto;
        mix-blend-mode: screen;
      }
    }

    .navlinks {
      flex: 0.6;

      ul {
        list-style: none;
        @include center;
        margin: 0;
        padding: 0;

        li {
          margin: 0 14px;

          &:hover {
            color: $neon-green;
          }
        }
      }
    }
  }

  .mobile_view {
    display: none;
  }

  .signup_login {
    flex: 0.2;
    text-align: right;

    a {
      margin-left: 10px;
      border-radius: 4px;
      padding: 8px 14px;
      background-color: $neon-green;

      font: {
        size: 14px;
        weight: 500;
      }

      &:nth-child(1) {
        color: #fff;
        background-color: $light-black;

        &:hover {
          color: $neon-green;
          background-color: transparent;
          border: 2px solid $neon-green;
        }
      }

      &:nth-child(2) {
        color: #000;

        &:hover {
          color: $neon-green;
          background-color: transparent;
          border: 2px solid $neon-green;
        }
      }
    }
  }

  @media (max-width: 998px) {
    .desktop_view {
      display: none;
    }

    .mobile_view {
      width: 100%;
      @include center;
      justify-content: space-between;

      .mobile_logo {
        flex: 0.2;
        margin-right: auto;

        img {
          width: 140px;
          height: auto;
          mix-blend-mode: screen;
        }
      }

      .mobile_nav_content {
        @include center(column);
        width: 100%;
        padding: 24px 0;

        ul {
          list-style: none;
          @include center(column);
          gap: 24px;
        }

        .signup_login {
          margin-top: 24px;
        }
      }
    }
  }
}

